test/data/syntax-errors/missing-function-indicator.ava
var thisFunction = () -> ava "Hello"; end;